2004-09-12  Andy Wingo  <wingo@pobox.com>

	* gnome/canvas.scm: New file.

	* examples/canvas.scm (main): Get the type of a canvas rect via
	gtype-class->type. The example still isn't working; I don't know
	how it ever did. Use (gnome canvas).

	* Makefile.am (EXTRA_DIST): Dist fixes.

	* gnome/gw/canvas-spec.scm (initialize): Adapt for module name
	changes, load-defs-with-overrides.

	* gnome/canvas.scm: New file.

	* gnome/gw/Makefile.am (libgw_guile_gnome_canvas_la_SOURCES):
	Don't dist the g-wrap generated C files.

	* gnome/overrides/, gnome/Makefile.am: Add overrides.

2004-06-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/canvas-spec.scm (initialize): Remove depends-on.
	(<canvas-wrapset>): Add #:dependencies.

2004-06-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/Makefile.am (BUILT_SOURCES): Build fix.

2004-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/canvas.scm: Update canvas module import.

	* gnome/gw/canvas-spec.scm: Bugfix: use 'gnome-canvas name for
	generating wrapset.

2004-06-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* gnome/gw/canvas-spec.scm: New name (WAS: libgnomecanvas-spec.scm).

	* gnome/gw/Makefile.am: Drop `libgnome' from toplevel module name
	and -spec.scm file.

2004-05-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/canvas.scm (main): Use more apt example text, use move
	and affine.

2004-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* examples/canvas.scm: New file.

	* libgnomecanvas/Makefile.am (SUBDIRS): Add examples.

2004-05-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ChangeLog: New file.
